CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0017 NEW)
PROJECT(DICOMInterface)

IF(NOT MEDV4D_ROOT_DIRECTORY)
	SET(MEDV4D_ROOT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../.." )
ENDIF(NOT MEDV4D_ROOT_DIRECTORY)
IF( NOT MEDV4D_INCLUDE_DIR )
	SET(MEDV4D_INCLUDE_DIR "${MEDV4D_ROOT_DIRECTORY}/include" )
ENDIF( NOT MEDV4D_INCLUDE_DIR )

SET( MEDV4D_DICOM_INTERFACE_INCLUDE_DIR "${MEDV4D_INCLUDE_DIR}/MedV4D/DICOMInterface" )
SET( MEDV4D_DICOM_INTERFACE_SOURCE_DIR "." )

SET( DICOM_INTERFACE_HEADERS
	"${MEDV4D_DICOM_INTERFACE_INCLUDE_DIR}/AbstractService.h"
	"${MEDV4D_DICOM_INTERFACE_INCLUDE_DIR}/DcmObject.h"
	"${MEDV4D_DICOM_INTERFACE_INCLUDE_DIR}/DcmProvider.h"
	"${MEDV4D_DICOM_INTERFACE_INCLUDE_DIR}/DicomAssoc.h"
	"${MEDV4D_DICOM_INTERFACE_INCLUDE_DIR}/dicomDataStreamDecoder.h"
	"${MEDV4D_DICOM_INTERFACE_INCLUDE_DIR}/DICOMSupport.h"
	"${MEDV4D_DICOM_INTERFACE_INCLUDE_DIR}/FindService.h"
	"${MEDV4D_DICOM_INTERFACE_INCLUDE_DIR}/LocalService.h"
	"${MEDV4D_DICOM_INTERFACE_INCLUDE_DIR}/MoveService.h"
	"${MEDV4D_DICOM_INTERFACE_INCLUDE_DIR}/StoreService.h"
	"${MEDV4D_DICOM_INTERFACE_INCLUDE_DIR}/structures.h"
	)

SET( DICOM_INTERFACE_SOURCES
	"${MEDV4D_DICOM_INTERFACE_SOURCE_DIR}/AbstractService.cpp"
	"${MEDV4D_DICOM_INTERFACE_SOURCE_DIR}/DcmProvider.cpp"
	"${MEDV4D_DICOM_INTERFACE_SOURCE_DIR}/DicomAssoc.cpp"
	"${MEDV4D_DICOM_INTERFACE_SOURCE_DIR}/DicomObj.cpp"
	"${MEDV4D_DICOM_INTERFACE_SOURCE_DIR}/FindService.cpp"
	"${MEDV4D_DICOM_INTERFACE_SOURCE_DIR}/LocalService.cpp"
	"${MEDV4D_DICOM_INTERFACE_SOURCE_DIR}/MoveService.cpp"
	"${MEDV4D_DICOM_INTERFACE_SOURCE_DIR}/StoreService.cpp"
	)

SOURCE_GROUP( Headers FILES ${DICOM_INTERFACE_HEADERS} )
SOURCE_GROUP( Sources FILES ${DICOM_INTERFACE_SOURCES} )

ADD_LIBRARY( DICOMInterface ${DICOM_INTERFACE_HEADERS} ${DICOM_INTERFACE_SOURCES} )
SET_TARGET_PROPERTIES( DICOMInterface PROPERTIES DEBUG_POSTFIX ${MEDV4D_DEBUG_POSTFIX} ) 
SET_TARGET_PROPERTIES( DICOMInterface PROPERTIES RELEASE_POSTFIX ${MEDV4D_RELEASE_POSTFIX} )
SET_TARGET_PROPERTIES( DICOMInterface PROPERTIES PREFIX ${MEDV4D_PLATFORM_LIBRARY_PREFIX} )
SET_TARGET_PROPERTIES( DICOMInterface PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${MEDV4D_LIB_OUTPUT_DIRECTORY} )
SET_TARGET_PROPERTIES( DICOMInterface PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${MEDV4D_LIB_OUTPUT_DIRECTORY} )
SET_TARGET_PROPERTIES( DICOMInterface PROPERTIES STATIC_LIBRARY_FLAGS /NODEFAULTLIB)
