CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0017 NEW)
PROJECT(GUI)

IF(NOT MEDV4D_ROOT_DIRECTORY)
	SET(MEDV4D_ROOT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../.." )
ENDIF(NOT MEDV4D_ROOT_DIRECTORY)
IF( NOT MEDV4D_INCLUDE_DIR )
	SET(MEDV4D_INCLUDE_DIR "${MEDV4D_ROOT_DIRECTORY}/include" )
ENDIF( NOT MEDV4D_INCLUDE_DIR )

SET( MEDV4D_GUI_INCLUDE_DIR "${MEDV4D_INCLUDE_DIR}/MedV4D/GUI" )
SET( MEDV4D_GUI_SOURCE_DIR "." )
SET( MEDV4D_GUI_WIDGETS_INCLUDE_DIR "${MEDV4D_GUI_INCLUDE_DIR}/widgets" )
SET( MEDV4D_GUI_WIDGETS_SOURCE_DIR "${MEDV4D_GUI_SOURCE_DIR}/widgets" )
SET( MEDV4D_GUI_UTILS_SOURCE_DIR "${MEDV4D_GUI_SOURCE_DIR}/utils" )
SET( MEDV4D_GUI_UTILS_INCLUDE_DIR "${MEDV4D_GUI_INCLUDE_DIR}/utils" )
SET( MEDV4D_GUI_TF_SOURCE_DIR "${MEDV4D_GUI_SOURCE_DIR}/TF" )
SET( MEDV4D_GUI_TF_INCLUDE_DIR "${MEDV4D_GUI_INCLUDE_DIR}/TF" )
SET( MEDV4D_GUI_RENDERERS_SOURCE_DIR "${MEDV4D_GUI_SOURCE_DIR}/renderers" )
SET( MEDV4D_GUI_RENDERERS_INCLUDE_DIR "${MEDV4D_GUI_INCLUDE_DIR}/renderers" )



INCLUDE( "${MEDV4D_CMAKE_MODULES_DIR}/Functions.cmake" )

SET( EXP_COMPILE_DEFINITIONS "-DNOMINMAX" )
IF( ${DEVIL_ENABLED} MATCHES "ON" )
	SET( EXP_COMPILE_DEFINITIONS ${EXP_COMPILE_DEFINITIONS} "-DUSE_DEVIL" )
ENDIF( ${DEVIL_ENABLED} MATCHES "ON" )
IF( ${PYTHON_ENABLED} MATCHES "ON" )
	SET( EXP_COMPILE_DEFINITIONS ${EXP_COMPILE_DEFINITIONS} "-DUSE_PYTHON" )
ENDIF( ${PYTHON_ENABLED} MATCHES "ON" )

ADD_DEFINITIONS( ${EXP_COMPILE_DEFINITIONS} )



SET( GUI_WIDGETS_HEADERS
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/ADesktopContainer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/ADesktop.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/AGLViewer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/AGUIViewer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/AViewerContainer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/AViewer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/BasicSliceViewer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/ColorChooserButton.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/Desktop.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/GeneralViewer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/GLThreadedWidget.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/GLWidget.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/GridDesktop.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/MainWindow.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/MultiDockWidget.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/ProgressInfoDialog.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/PythonTerminal.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/ScaleVisualizer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/SettingsDialog.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/Simple2DViewer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/SimpleVolumeViewer.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/TerminalWidget.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/TransferFunction1DEditor.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/Viewer2DWidget.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/ViewerConstructionKit.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/ViewerControls.h"
	"${MEDV4D_GUI_WIDGETS_INCLUDE_DIR}/ViewerDesktop.h"
	)

SET( GUI_WIDGETS_UIS
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/ProgressInfoDialog.ui"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/SettingsDialog.ui"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/ViewerControls.ui"
	)

SET( GUI_WIDGETS_SOURCES
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/AGLViewer.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/AViewer.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/BasicSliceViewer.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/Desktop.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/GeneralViewer.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/GLThreadedWidget.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/GridDesktop.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/MainWindow.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/ScaleVisualizer.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/TransferFunction1DEditor.cpp"
	"${MEDV4D_GUI_WIDGETS_SOURCE_DIR}/ViewerDesktop.cpp"
	)

SET( GUI_UTILS_HEADERS
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/ACamera.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/AHUDInfo.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/../managers/ApplicationManager.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/ARenderer.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/Camera.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/CgShaderTools.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/../managers/DatasetManager.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/DrawingTools.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/FrameBufferObject.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/GLTextureImage.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/I2DViewer.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/I3DViewer.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/IUserEvents.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/Module.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/MouseTracking.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/OGLDrawing.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/OGLSelection.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/OGLTools.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/../managers/OpenGLManager.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/PortInterfaceHelper.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/PrimitiveCreationEventController.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/ProxyRenderingExtension.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/ProxyViewerController.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/QtM4DTools.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/QtModelViewTools.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/Settings.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/SelectAndEditEventController.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/SliceRenderer.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/TransferFunctionBuffer.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/TransferFunction.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/ViewConfiguration.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/ViewerAction.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/ViewerController.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/ViewerInternalState.h"
	"${MEDV4D_GUI_UTILS_INCLUDE_DIR}/../managers/ViewerManager.h"
	)

SET( GUI_UTILS_SOURCES
		"${MEDV4D_GUI_UTILS_SOURCE_DIR}/ACamera.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/../managers/ApplicationManager.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/Camera.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/CgShaderTools.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/../managers/DatasetManager.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/DrawingTools.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/GLTextureImage.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/OGLDrawing.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/OGLSelection.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/OGLTools.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/../managers/OpenGLManager.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/QtM4DTools.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/SliceRenderer.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/TransferFunctionBuffer.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/ViewConfiguration.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/ViewerAction.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/ViewerController.cpp"
	"${MEDV4D_GUI_UTILS_SOURCE_DIR}/../managers/ViewerManager.cpp"
	)

SET( GUI_TF_SOURCES
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFAbstractModifier.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFCompositeModifier.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFCompositionDialog.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFCreator.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFEditor.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFEditorGUI.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFGrayscaleAlphaPainter1D.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFHSVaFunction.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFHSVaPainter1D.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFModifier1D.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFPainter1D.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFPaletteButton.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFPalette.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFPolygonModifier.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFQtXmlReader.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFQtXmlWriter.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFRGBaFunction.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFRGBaPainter1D.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFViewModifier.cpp"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFWorkCopy.cpp"
	)

SET( GUI_TF_UIS
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFCompositeModifier.ui"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFCompositionDialog.ui"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFCreator.ui"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFDimensionZoom.ui"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFEditorGUI.ui"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFModifier1D.ui"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFPalette.ui"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFPolygonModifier.ui"
	"${MEDV4D_GUI_TF_SOURCE_DIR}/TFViewModifier.ui"
	)

SET( GUI_TF_HEADERS
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFAbstractFunction.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFAbstractModifier.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFAbstractPainter.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFColor.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFColorVector.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFCommon.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFCompositeModifier.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFCompositionDialog.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFCreatorDialogButtons.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFCreator.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFDimensions.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFEditorGUI.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFEditor.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFFunctionInterface.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFFunctions.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFGrayscaleAlphaPainter1D.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFHistogram.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFHSVaFunction.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFHSVaPainter1D.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFModifier1D.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFModifiers.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFMultiDVector.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFPainter1D.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFPainters.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFPaletteButton.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFPalette.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFPolygonModifier.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFPredefined.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFQtXmlReader.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFQtXmlWriter.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFRGBaFunction.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFRGBaPainter1D.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFViewModifier.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFWorkCopy.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFXmlReaderInterface.h"
	"${MEDV4D_GUI_TF_INCLUDE_DIR}/TFXmlWriterInterface.h"
	)

SET( GUI_RENDERERS_HEADERS
	"${MEDV4D_GUI_RENDERERS_INCLUDE_DIR}/RendererTools.h"
	"${MEDV4D_GUI_RENDERERS_INCLUDE_DIR}/SliceRenderer.h"
	"${MEDV4D_GUI_RENDERERS_INCLUDE_DIR}/VolumeRenderer.h"
	)

SET( GUI_RENDERERS_SOURCES
	"${MEDV4D_GUI_RENDERERS_SOURCE_DIR}/SliceRenderer.cpp"
	"${MEDV4D_GUI_RENDERERS_SOURCE_DIR}/VolumeRenderer.cpp"
	)


#SET( GUI_RESOURCES )

FILTER_HEADERS_FOR_MOC( "${GUI_UTILS_HEADERS}" mocinput1 ) # ${GUI_TF_HEADERS}
FILTER_HEADERS_FOR_MOC( "${GUI_WIDGETS_HEADERS}" mocinput2 ) # ${GUI_TF_HEADERS}
FILTER_HEADERS_FOR_MOC( "${GUI_TF_HEADERS}" mocinput3 )
QT4_WRAP_CPP(mocoutput ${mocinput1} ${mocinput2} ${mocinput3} OPTIONS ${EXP_COMPILE_DEFINITIONS} )

#QT4_ADD_RESOURCES(rccoutput ${rccinput} )
M4D_QT4_WRAP_UI( GUI_WIDGETS_UIS_HEADERS ${GUI_WIDGETS_UIS} )  #
M4D_QT4_WRAP_UI( GUI_TF_UIS_HEADERS ${GUI_TF_UIS} )
#MESSAGE( "----------------${GUI_WIDGETS_UIS_HEADERS}" )

SOURCE_GROUP( Headers FILES ${GUI_WIDGETS_HEADERS} )
SOURCE_GROUP( Sources FILES ${GUI_WIDGETS_SOURCES} )

ADD_LIBRARY( GUI 
	${GUI_WIDGETS_HEADERS} 
	${GUI_WIDGETS_SOURCES} 
	${GUI_WIDGETS_UIS} 
	${mocoutput} 
	${GUI_TF_HEADERS}
	${GUI_TF_SOURCES}
	${GUI_TF_UIS_HEADERS}
	${GUI_RENDERERS_HEADERS}
	${GUI_RENDERERS_SOURCES}
	${GUI_UTILS_HEADERS} 
	${GUI_UTILS_SOURCES}
	)
SET_TARGET_PROPERTIES( GUI PROPERTIES DEBUG_POSTFIX ${MEDV4D_DEBUG_POSTFIX} ) 
SET_TARGET_PROPERTIES( GUI PROPERTIES RELEASE_POSTFIX ${MEDV4D_RELEASE_POSTFIX} )
SET_TARGET_PROPERTIES( GUI PROPERTIES PREFIX ${MEDV4D_PLATFORM_LIBRARY_PREFIX} )
SET_TARGET_PROPERTIES( GUI PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${MEDV4D_LIB_OUTPUT_DIRECTORY} )
SET_TARGET_PROPERTIES( GUI PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${MEDV4D_LIB_OUTPUT_DIRECTORY} )
