CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0017 NEW)
PROJECT(Imaging)

IF(NOT MEDV4D_ROOT_DIRECTORY)
	SET(MEDV4D_ROOT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../.." )
ENDIF(NOT MEDV4D_ROOT_DIRECTORY)
IF( NOT MEDV4D_INCLUDE_DIR )
	SET(MEDV4D_INCLUDE_DIR "${MEDV4D_ROOT_DIRECTORY}/include" )
ENDIF( NOT MEDV4D_INCLUDE_DIR )

SET( MEDV4D_IMAGING_INCLUDE_DIR "${MEDV4D_INCLUDE_DIR}/MedV4D/Imaging" )
SET( MEDV4D_IMAGING_SOURCE_DIR "." )



SET( IMAGING_HEADERS
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ADataset.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AFilter.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AGeometryDataset2D.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AGeometryDataset.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AImage2DFilter.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AImage2DFilter.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AImageData.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AImageElementFilter.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AImageElementFilter.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AImageFilter.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AImageFilter.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AImageFilterWholeAtOnce.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AImageFilterWholeAtOnce.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AImage.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AImageRegion.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AImageSliceFilter.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AImageSliceFilter.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AImage.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AMultiImageFilter.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AMultiImageFilter.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/APipeline.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/AProcessingUnit.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/BSpline.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/BSpline.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/CannyEdgeDetection.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/CanonicalProbModel.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ConnectionInterface.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ConnectionInterface.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/Convolution.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/Convolution.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/DatasetClassEnum.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/detail/DatasetDefinitionTools.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/DatasetFactory.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/DatasetSerializationTools.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/EnergicSnake.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/EnergyModels2.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/EnergyModels.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ExampleImageFilters.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ExampleImageFilters.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/FaceInfo.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/FilterComputation.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/filterIDsEnum.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/GeometricalObject.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/GraphCutSegmentation.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/GeometricalObjectTypeOperations.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/GeometryDatasetFactory.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/Histogram.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ImageDataTemplate.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ImageDataTemplate.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ImageFactory.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ImageFactory.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/Image.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ImageIterator.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ImageRegionAccessors.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ImageRegion.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/Image.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ImageTools.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ImageTraits.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/Imaging.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/Mesh.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ModificationManager.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/MultiHistogram.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ParametricCurve.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/ParametricCurve.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/PipelineContainer.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/Pipeline.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/PipelineMessages.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/PointSet.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/PolygonFill.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/PolygonFill.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/Polyline.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/Ports.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/Ports.tcc"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/Selection.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/VertexInfo.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/painting/ABrush.h"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/painting/Paint.h"
	)

SET( IMAGING_SOURCES
	"${MEDV4D_IMAGING_SOURCE_DIR}/AbstractImageFilter.cpp"
	"${MEDV4D_IMAGING_SOURCE_DIR}/ADataset.cpp"
	"${MEDV4D_IMAGING_SOURCE_DIR}/AFilter.cpp"
	"${MEDV4D_IMAGING_SOURCE_DIR}/AImageData.cpp"
	"${MEDV4D_IMAGING_SOURCE_DIR}/ConnectionInterface.cpp"
	"${MEDV4D_IMAGING_SOURCE_DIR}/DatasetFactory.cpp"
	"${MEDV4D_IMAGING_SOURCE_DIR}/GeometryDatasetFactory.cpp"
	"${MEDV4D_IMAGING_SOURCE_DIR}/Image.cpp"
	"${MEDV4D_IMAGING_SOURCE_DIR}/ImageFactory.cpp"
	"${MEDV4D_IMAGING_SOURCE_DIR}/ModificationManager.cpp"
	"${MEDV4D_IMAGING_SOURCE_DIR}/PipelineContainer.cpp"
	"${MEDV4D_IMAGING_SOURCE_DIR}/Pipeline.cpp"
	"${MEDV4D_IMAGING_SOURCE_DIR}/Ports.cpp"
	)

SET( CUDA_IMAGING_INCLUDES
	"${MEDV4D_IMAGING_INCLUDE_DIR}/cuda/detail/ConnectedComponentLabeling.cuh"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/cuda/detail/CUDAFiltersUtils.cuh"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/cuda/detail/EdgeDetection.cuh"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/cuda/detail/LocalMinimaDetection.cuh"
	"${MEDV4D_IMAGING_INCLUDE_DIR}/cuda/detail/WatershedTransformation.cuh"
	)

SET( CUDA_IMAGING_SOURCES
	"${MEDV4D_IMAGING_SOURCE_DIR}/cuda/ConnectedComponentLabeling.cu"
	"${MEDV4D_IMAGING_SOURCE_DIR}/cuda/EdgeDetection.cu"
	"${MEDV4D_IMAGING_SOURCE_DIR}/cuda/GraphMinCut.cu"
	"${MEDV4D_IMAGING_SOURCE_DIR}/cuda/GraphOperations.cu"
	"${MEDV4D_IMAGING_SOURCE_DIR}/cuda/LocalMinimaDetection.cu"
	"${MEDV4D_IMAGING_SOURCE_DIR}/cuda/RegionAdjacencyGraph.cu"
	"${MEDV4D_IMAGING_SOURCE_DIR}/cuda/SimpleFilters.cu"
	"${MEDV4D_IMAGING_SOURCE_DIR}/cuda/WatershedTransformation.cu"
	)

SOURCE_GROUP( Headers FILES ${IMAGING_HEADERS} )
SOURCE_GROUP( Sources FILES ${IMAGING_SOURCES} )


IF( MEDV4D_CUDA_ENABLED )
	CUDA_ADD_LIBRARY( Imaging ${IMAGING_HEADERS} ${IMAGING_SOURCES} ${CUDA_IMAGING_INCLUDES} ${CUDA_IMAGING_SOURCES} )
ELSE( MEDV4D_CUDA_ENABLED )
	ADD_LIBRARY( Imaging ${IMAGING_HEADERS} ${IMAGING_SOURCES} )
ENDIF( MEDV4D_CUDA_ENABLED )

SET_TARGET_PROPERTIES( Imaging PROPERTIES DEBUG_POSTFIX ${MEDV4D_DEBUG_POSTFIX} ) 
SET_TARGET_PROPERTIES( Imaging PROPERTIES RELEASE_POSTFIX ${MEDV4D_RELEASE_POSTFIX} )
SET_TARGET_PROPERTIES( Imaging PROPERTIES PREFIX ${MEDV4D_PLATFORM_LIBRARY_PREFIX} )
SET_TARGET_PROPERTIES( Imaging PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${MEDV4D_LIB_OUTPUT_DIRECTORY} )
SET_TARGET_PROPERTIES( Imaging PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${MEDV4D_LIB_OUTPUT_DIRECTORY} )
